podinfo-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-podinfo
  namespace: kong-podinfo
  annotations:
    kuma.io/sidecar-injection: enabled
  labels:
    kuma.io/sidecar-injection: enabled
