podinfo-demo/podinfo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: kong-podinfo
  annotations:
    9898.service.kuma.io/protocol: "http"
spec:
  type: NodePort
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      protocol: TCP
